--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,3 +1,12 @@
+@import '@o2-ui/carmore-icon/index.css';
+
+* {
+  box-sizing: border-box;
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   --ifm-color-primary: #0d6ffc;
   --ifm-color-primary-dark: #0d5be8;
@@ -6,6 +15,10 @@
   --ifm-color-primary-light: #2b93ff;
   --ifm-color-primary-lighter: #53b5ff;
   --ifm-color-primary-lightest: #8acfff;
+
+  --ifm-color-grey-alpha-100: #bababa33;
+  --ifm-color-grey-alpha-200: #bababa44;
+  --ifm-color-grey-alpha-300: #bababa55;
 
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
@@ -20,5 +33,42 @@
   --ifm-color-primary-lighter: #bae1ff;
   --ifm-color-primary-lightest: #d8eeff;
 
+  --ifm-color-grey-alpha-100: #dedede33;
+  --ifm-color-grey-alpha-200: #dedede44;
+  --ifm-color-grey-alpha-300: #dedede55;
+
   --docusaurus-highlighted-code-line-bg: rgba(255, 255, 255, 0.1);
+}
+
+.iconLabel {
+  margin: 0;
+  font-size: 0.85rem;
+}
+
+.textPrimary {
+  color: var(--ifm-color-primary);
+}
+
+.textPrimaryLight {
+  color: var(--ifm-color-primary-light);
+}
+
+.textRed {
+  color: red;
+}
+
+.textGreen {
+  color: green;
+}
+
+.textBlue {
+  color: #0d6ffc;
+}
+
+.textPurple {
+  color: purple;
+}
+
+.textOrange {
+  color: orange;
 }
