--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -14,6 +14,11 @@
   --ifm-color-primary-lighter: #53b5ff;
   --ifm-color-primary-lightest: #8acfff;
 
+  --color-common-100: #1e1e1e;
+  --color-common-0: #ffffff;
+
+  --color-primary-car: #0d6ffc;
+
   --ifm-color-grey-alpha-100: #bababa33;
   --ifm-color-grey-alpha-200: #bababa44;
   --ifm-color-grey-alpha-300: #bababa55;
