--- a/src/molecules/carmore-icon/IconItem/style.module.css
+++ b/src/molecules/carmore-icon/IconItem/style.module.css
@@ -12,13 +12,14 @@
   }
 }
 
-.iconLabel {
+.icon-label {
   margin: 0;
   font-size: 1rem;
   white-space: nowrap;
 }
 
 .box {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -30,4 +31,10 @@
   min-height: 170px;
   max-width: 170px;
   max-height: 170px;
+}
+
+.new-badge {
+  position: absolute;
+  top: 0.375rem;
+  left: 0.375rem;
 }
